syntax = "proto3";

package courier;

option go_package = "github.com/bow/courier/api";

service Courier {
  // GetInfo returns the version info of the running server.
  rpc GetInfo (GetInfoRequest) returns (GetInfoResponse) {}
}

message GetInfoRequest {}

message GetInfoResponse {
  string name = 1;
  string version = 2;
  string git_commit = 3;
  string build_time = 4;
}
